--- a/FingerTwisterApp/res/layout/main.xml
+++ b/FingerTwisterApp/res/layout/main.xml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-<TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Hello World, FingerTwisterActivity"
-    />
+    android:orientation="horizontal" >
+
+    <LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    >
+    
+        <Button
+            android:text="nappi"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            />
+    
+        <TextView 
+            android:background="#59FF00"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            />
+        
+		<TextView
+		    android:text="Index"
+		    android:layout_width="0dp"
+		    android:layout_weight="1"
+		    android:layout_height="fill_parent"
+		    android:gravity="center"
+		    />
+		
+	</LinearLayout>
+	
+    <SurfaceView />
 </LinearLayout>
 
