--- a/FingerTwisterApp/res/layout/main.xml
+++ b/FingerTwisterApp/res/layout/main.xml
@@ -2,37 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
-    <LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    >
+    <LinearLayout android:layout_width="match_parent"
+	    android:layout_height="wrap_content">
     
-        <Button
-            android:text="nappi"
+        <Button android:text="nappi"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="fill_parent"
-            />
+            android:layout_height="wrap_content" />
     
-        <TextView 
-            android:background="#59FF00"
+        <TextView android:background="#59FF00"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="fill_parent"
-            />
+            android:layout_height="wrap_content" />
         
-		<TextView
-		    android:text="Index"
+		<TextView android:text="Index"
 		    android:layout_width="0dp"
 		    android:layout_weight="1"
-		    android:layout_height="fill_parent"
-		    android:gravity="center"
-		    />
+		    android:layout_height="wrap_content"
+		    android:gravity="center" />
 		
 	</LinearLayout>
 	
-    <SurfaceView />
+    <org.androidaalto.fingertwister.DemoSurface android:id="@+id/game_field"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
 </LinearLayout>
 
