--- a/FingerTwisterApp/res/layout/main.xml
+++ b/FingerTwisterApp/res/layout/main.xml
@@ -10,6 +10,7 @@
 	    >
     
         <Button
+            android:id="@+id/restart_button"
             android:text="nappi"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -17,6 +18,7 @@
             />
     
         <TextView 
+            android:id="@+id/instruction_color"
             android:background="#59FF00"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -24,6 +26,7 @@
             />
         
 		<TextView
+		    android:id="@+id/instruction_finger"
 		    android:text="Index"
 		    android:layout_width="0dp"
 		    android:layout_weight="1"
