--- a/FingerTwisterApp/res/layout/main.xml
+++ b/FingerTwisterApp/res/layout/main.xml
@@ -25,9 +25,9 @@
 		
 	</LinearLayout>
 	
-    <org.androidaalto.fingertwister.DemoSurface android:id="@+id/game_field"
+    <org.androidaalto.fingertwister.GamePanel android:id="@+id/game_field"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
 </LinearLayout>
 
