--- a/FingerTwisterApp/res/layout/main.xml
+++ b/FingerTwisterApp/res/layout/main.xml
@@ -9,7 +9,7 @@
     
         <Button
             android:id="@+id/restart_button"
-            android:text="nappi"
+            android:text="@string/restart"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content" />
@@ -23,7 +23,6 @@
         
 		<TextView
 		    android:id="@+id/instruction_finger"
-		    android:text="Index"
 		    android:layout_width="0dp"
 		    android:layout_weight="1"
 		    android:layout_height="wrap_content"
