--- a/FingerTwisterApp/res/layout/main.xml
+++ b/FingerTwisterApp/res/layout/main.xml
@@ -11,7 +11,7 @@
     
         <Button
             android:id="@+id/restart_button"
-            android:text="@string/restart"
+            android:text="@string/restart_button"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="fill_parent"
