--- a/FingerTwisterApp/res/layout/main.xml
+++ b/FingerTwisterApp/res/layout/main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
     <LinearLayout
 	    android:layout_width="match_parent"
@@ -11,7 +11,7 @@
     
         <Button
             android:id="@+id/restart_button"
-            android:text="@string/restart"
+            android:text="@string/restart_button"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
