--- a/FingerTwisterApp/res/values/string.xml
+++ b/FingerTwisterApp/res/values/string.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">FingerTwisterApp</string>
-    <string name="restart_button">Uusi peli</string>
+    <string name="restart_button">New Game</string>
     
     <!-- Fingers -->
-    <string name="thumb">Peukalo</string>
-    <string name="index_finger">Etusormi</string>
-    <string name="middle_finger">Keskisormi</string>
-    <string name="ring_finger">Nimetön</string>
-    <string name="little_finger">Pikkusormi</string>
+    <string name="thumb">Thumb</string>
+    <string name="index_finger">Index finger</string>
+    <string name="middle_finger">Middle finger</string>
+    <string name="ring_finger">Ring finger</string>
+    <string name="little_finger">Little finger</string>
         
 </resources>
